feat: add sort params for words
